--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Relations avec l’administration fiscale</h3>
-            <p>Je vous accompagne dans toutes vos démarches auprès de l’administration fiscale pour simplifier et sécuriser vos obligations.</p>
+            <p>J’accompagne mes clients dans toutes leurs démarches auprès de l’administration fiscale pour simplifier et sécuriser leurs obligations :</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
@@ -92,15 +92,15 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Conseil en fiscalité</h3>
-            <p>J’accompagne mes clients dans la gestion de leur fiscalité en fonction de leurs objectifs personnels et professionnels.</p>
+            <p>J’accompagne mes clients dans la gestion de leur fiscalité en fonction de leurs objectifs personnels et professionnels, en mettant l’accent sur l’ingénierie fiscale pour trouver des solutions adaptées et sécurisées.</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
             <ul>
-              <li>Stratégies pour réduire l’imposition et maximiser les avantages fiscaux.</li>
-              <li>Solutions pour la gestion de patrimoine, transmission d’entreprise et succession.</li>
-              <li>Conseils en fiscalité immobilière : achat, vente et investissement.</li>
-              <li>Déclarations fiscales conformes aux obligations légales.</li>
+              <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li>
+              <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li>
+              <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li>
+              <li>Préparer et déposer vos déclarations fiscales dans le respect des obligations légales, afin de garantir une conformité totale.</li>
             </ul>
             <button class="flip-button">Retour</button>
           </div>
@@ -111,7 +111,7 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Gestion des contrôles et litiges fiscaux</h3>
-            <p>En cas de contrôle ou de litige fiscal, mon rôle est de vous défendre avec pragmatisme et réactivité.</p>
+            <p>Je défends les intérêts de mes clients dans la gestion des contrôles et litiges fiscaux, en agissant avec pragmatisme et réactivité. Je les assiste dans les relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à chaque situation.</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
@@ -128,13 +128,13 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Droit des sociétés</h3>
-            <p>Accompagner mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique.</p>
+            <p>L’assistance à mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique. Je les aide à structurer leur société de manière à ce qu’elle soit alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques. Mon rôle est de leur apporter une vision claire et stratégique à chaque étape :</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
             <ul>
-              <li>Créer votre société en prenant en compte vos besoins spécifiques et le cadre fiscal le plus avantageux.</li>
-              <li>Adapter et ajuster la structure de votre société au fur et à mesure de son développement, en tenant compte des évolutions de votre activité ou des changements dans votre équipe dirigeante.</li>
+              <li> Créer leur société en prenant en compte leurs besoins spécifiques et le cadre fiscal le plus avantageux.</li>
+              <li>Adapter et ajuster la structure de leur société au fur et à mesure de son développement, en tenant compte des évolutions de leur activité ou des changements dans leur équipe dirigeante.</li>
           </ul>
             <button class="flip-button">Retour</button>
           </div>
@@ -145,14 +145,14 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Dommage corporel et défense des victimes</h3>
-            <p>Je vous accompagne dans la défense de vos droits en cas de dommage corporel.</p>
+            <p>Je défends les droits des victimes de dommage corporel, en veillant à ce qu’elles soient pleinement indemnisées pour leurs préjudices.</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
             <ul>
-              <li>Vous guider dans les démarches juridiques à effectuer après un accident, qu’il soit médical, de la route ou autre.</li>
-              <li>Analyser l’ensemble de votre préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle vous avez droit.</li>
-              <li>Négocier avec les assureurs ou, si nécessaire, représenter vos intérêts devant les juridictions compétentes pour obtenir une indemnisation complète et juste.</li>
+              <li>Les guider dans les démarches juridiques à entreprendre après un accident, qu’il soit médical, de la route ou autre.</li>
+              <li>Analyser l’ensemble de leur préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle elles ont droit.</li>
+              <li>Négocier avec les assureurs ou, si nécessaire, représenter leurs intérêts devant les juridictions compétentes pour obtenir une indemnisation complète et juste.</li>
           </ul>
             <button class="flip-button">Retour</button>
           </div>
@@ -174,16 +174,16 @@
     <h2>Mes Honoraires</h2>
     <div class="honoraires-container">
       <div class="honoraire-card">
-        <h3>Au forfait</h3>
-        <p>Un tarif fixe pour des missions bien définies.</p>
+        <h3>Honoraires au temps passét</h3>
+        <p>Les honoraires sont calculés en fonction du temps effectivement consacré à chaque dossier, sur la base d’un tarif horaire préalablement défini.</p>
       </div>
       <div class="honoraire-card">
-        <h3>Au temps passé</h3>
-        <p>Un tarif horaire en fonction du temps consacré à votre dossier.</p>
+        <h3>Honoraires au forfait</h3>
+        <p>Un montant fixe est convenu pour l’ensemble de la mission, garantissant une prévisibilité totale des coûts, indépendamment des aléas de la procédure.</p>
       </div>
       <div class="honoraire-card">
-        <h3>Au résultat</h3>
-        <p>Un pourcentage sur les gains obtenus grâce à notre intervention.</p>
+        <h3>Honoraires au résultat</h3>
+        <p>L’honoraire est établi en fonction des résultats obtenus, avec une part variable liée à la réussite de l’action, qu’il s’agisse d’une indemnisation, d’une réduction de créance ou de tout autre avantage lié au dossier. Cette formule est toujours complémentaire aux honoraires au temps passé et au forfait.</p>
       </div>
     </div>
   </section>
