ajout adresse et  horaires

--- a/index.html
+++ b/index.html
@@ -289,9 +289,14 @@
         </a>
     </div>
     <div class="footer-links">
+      <p>Horaires: 9h - 19h</p>
+      <p>Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
+  </div>
+    <div class="footer-links">
       <a href="/mentions-legales.html">Mentions légales</a>
       <a href="/politique-confidentialite.html">Politique de confidentialité</a>
   </div>
+ 
     <p>&copy; 2025 Maître Giorgi | Tous droits réservés</p>
 </footer>
 
