--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact-container">
-      <div class="form-container">
+      <!-- <div class="form-container">
         <h2>Contactez-moi</h2>
         <form id="contact-form">
           <input type="text" id="name" placeholder="Votre nom" required />
@@ -260,7 +260,7 @@
         </form>
 
         <div id="status-message"></div>
-      </div>
+      </div> -->
       <div class="map-container">
         <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
             marginwidth="0"
