--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           </div>
           <div class="card-back">
             <ul>
-              <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li>
-              <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes locales).</li>
+              <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li> <br>
+              <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes locales).</li> <br>
               <li>Mise en place et sécurisation de dispositifs fiscaux spécifiques, comme l’application du régime de faveur des impatriés.</li>
           </ul>
             <button class="flip-button">Retour</button>
@@ -97,9 +97,9 @@
           </div>
           <div class="card-back">
             <ul>
-              <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li>
-              <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li>
-              <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li>
+              <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li> <br>
+              <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li> <br>
+              <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li> <br>
               <li>Préparer et déposer vos déclarations fiscales dans le respect des obligations légales, afin de garantir une conformité totale.</li>
             </ul>
             <button class="flip-button">Retour</button>
@@ -116,7 +116,7 @@
           </div>
           <div class="card-back">
             <ul>
-              <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et efficace.</li>
+              <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et efficace.</li> <br>
               <li>Construire une défense solide lors des contrôles fiscaux, qu’il s’agisse de vérifications de comptabilité, d’examen de situation fiscale personnelle (ESFP), ou de contrôles sur la TVA, en analysant les éléments du dossier et en développant des arguments pour contester les impositions contestables.</li>
           </ul>
             <button class="flip-button">Retour</button>
@@ -133,7 +133,7 @@
           </div>
           <div class="card-back">
             <ul>
-              <li> Créer leur société en prenant en compte leurs besoins spécifiques et le cadre fiscal le plus avantageux.</li>
+              <li> Créer leur société en prenant en compte leurs besoins spécifiques et le cadre fiscal le plus avantageux.</li> <br>
               <li>Adapter et ajuster la structure de leur société au fur et à mesure de son développement, en tenant compte des évolutions de leur activité ou des changements dans leur équipe dirigeante.</li>
           </ul>
             <button class="flip-button">Retour</button>
@@ -150,8 +150,8 @@
           </div>
           <div class="card-back">
             <ul>
-              <li>Les guider dans les démarches juridiques à entreprendre après un accident, qu’il soit médical, de la route ou autre.</li>
-              <li>Analyser l’ensemble de leur préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle elles ont droit.</li>
+              <li>Les guider dans les démarches juridiques à entreprendre après un accident, qu’il soit médical, de la route ou autre.</li> <br>
+              <li>Analyser l’ensemble de leur préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle elles ont droit.</li> <br>
               <li>Négocier avec les assureurs ou, si nécessaire, représenter leurs intérêts devant les juridictions compétentes pour obtenir une indemnisation complète et juste.</li>
           </ul>
             <button class="flip-button">Retour</button>
