--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Gestion des contrôles et litiges fiscaux</h3>
-            <p>Je défends les intérêts de mes clients dans la gestion des contrôles et litiges fiscaux, en agissant avec pragmatisme et réactivité. Je les assiste dans les relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à chaque situation.</p>
+            <p>Je défends les intérêts de mes clients dans la gestion des contrôles et litiges fiscaux, en agissant avec pragmatisme et réactivité. <br> <br> Je les assiste dans les relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à chaque situation.</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
@@ -128,7 +128,7 @@
         <div class="card-inner">
           <div class="card-front">
             <h3>Droit des sociétés</h3>
-            <p>L’assistance à mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique. Je les aide à structurer leur société de manière à ce qu’elle soit alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques. Mon rôle est de leur apporter une vision claire et stratégique à chaque étape :</p>
+            <p>L’assistance à mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique. <br> <br> Je les aide à structurer leur société de manière à ce qu’elle soit alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques. <br> <br> Mon rôle est de leur apporter une vision claire et stratégique à chaque étape :</p>
             <button class="flip-button">Lire la suite</button>
           </div>
           <div class="card-back">
