ajout infos mentions et politique

--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -26,7 +26,7 @@
   <section>
     <div>
       <h2>Protection des données personnelles</h2>
-      <p>Maître [Nom] s'engage à protéger vos données personnelles et à respecter votre vie privée. Cette politique de
+      <p>Maître Giorgi s'engage à protéger vos données personnelles et à respecter votre vie privée. Cette politique de
         confidentialité explique comment nous collectons, utilisons, stockons et protégeons vos informations.</p>
 
       <h3>1. Données collectées</h3>
@@ -38,7 +38,7 @@
         vous envoyer des informations relatives à nos services si vous en faites la demande.</p>
 
       <h3>3. Partage des données</h3>
-      <p>Maître [Nom] ne partage vos informations personnelles avec aucun tiers, sauf si cela est nécessaire pour
+      <p>Maître Giorgi ne partage vos informations personnelles avec aucun tiers, sauf si cela est nécessaire pour
         répondre à votre demande ou dans les cas prévus par la loi.</p>
 
       <h3>4. Sécurité des données</h3>
@@ -48,7 +48,7 @@
       <h3>5. Droits sur vos données</h3>
       <p>Conformément à la réglementation en vigueur, vous disposez d'un droit d'accès, de rectification, de
         suppression, ainsi que d'un droit à la portabilité de vos données personnelles. Vous pouvez exercer ces droits
-        en nous contactant directement par e-mail à [Email de contact].</p>
+        en nous contactant directement par e-mail à lisa.giorgi.avocat@outlook.com.</p>
 
       <h3>6. Modifications de la politique</h3>
       <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Toute modification
