--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -31,34 +31,34 @@
   <section>
     <div>
       <h2>Informations légales</h2>
-      <p>Conformément à la législation en vigueur, voici les informations concernant le site de Maître [Nom].</p>
+      <p>Conformément à la législation en vigueur, voici les informations concernant le site de Maître Giorgi.</p>
 
       <h3>1. Éditeur du site</h3>
-      <p>Le site [Nom du Site] est édité par :<br>
-        Maître [Nom], Avocat en [Spécialité]<br>
-        Adresse : [Adresse du Cabinet]<br>
-        Téléphone : [Numéro de téléphone]<br>
-        Email : [Email de contact]<br>
+      <p>Le site Lisa Giorgi - Avocat à Marseille est édité par :<br>
+        Maître Giorgi, Avocat en sécuriser la fiscalité des particuliers et des entreprise, avec une approche intégrée en droit des sociétés<br>
+        Adresse : 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille<br>
+        Téléphone : +33612414382<br>
+        Email : lisa.giorgi.avocat@outlook.com<br>
       </p>
 
       <h3>2. Hébergeur du site</h3>
       <p>Le site est hébergé par :<br>
-        [Nom de l'Hébergeur]<br>
-        Adresse de l'hébergeur : [Adresse]<br>
-        Téléphone : [Numéro de téléphone de l'hébergeur]<br>
+        Netlify<br>
+        Adresse de l'hébergeur : 44 Montgomery Street, Suite 300, San Francisco, CA 94104, États-Unis<br>
+        Téléphone : +1 844-899-7312<br>
       </p>
 
       <h3>3. Propriété intellectuelle</h3>
-      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître [Nom], sauf mention
+      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître Giorgi, sauf mention
         contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
 
       <h3>4. Données personnelles</h3>
       <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des
-        demandes de contact et des services proposés par Maître [Nom]. Vous disposez d'un droit d'accès, de
+        demandes de contact et des services proposés par Maître Giorgi. Vous disposez d'un droit d'accès, de
         rectification et de suppression de vos données personnelles.</p>
 
       <h3>5. Responsabilité</h3>
-      <p>Maître [Nom] met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être
+      <p>Maître Giorgi met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être
         tenue responsable des erreurs ou omissions pouvant y figurer.</p>
     </div>
   </section>
