--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
   <title>Maître Giorgi - Avocat à Marseille</title>
-  <link rel="icon" type="image/x-icon" href="logo.ico">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="./public/assets/images/logo.ico">
+  <link rel="stylesheet" href="./public/assets/css/styles.css">
 </head>
 
 
@@ -29,11 +29,11 @@
   <nav>
     <div class="nav-left">
       <a href="/index.html">
-        <img src="/logo.jpg" alt="Logo">
+        <img src="./public/assets/images/logo.jpg" alt="Logo">
       </a>
     </div>
     <div class="hamburger">
-      <img src="hamburger.svg" alt="Menu">
+      <img src="./public/assets/images/hamburger.svg" alt="Menu">
     </div>
     <ul class="nav-links">
       <li><a href="#services">Domaine d'activité</a></li>
@@ -57,7 +57,7 @@
   <!-- Header Section -->
   <header>
     <div class="header-container">
-      <img src="/profil.jpeg" alt="Maître Giorgi" class="header-photo">
+      <img src="./public/assets/images/profil.jpeg" alt="Maître Giorgi" class="header-photo">
       <div class="header-text">
         <h1>Lisa Giorgi</h1>
         <h2>Avocat au Barreau de Marseille</h2>
@@ -66,7 +66,7 @@
     </div>
   </header>
 
-  <section id="services">
+  <div id="services">
     <h2>Mon Domaine d'Activité</h2>
     <div class="services-container">
       
@@ -159,8 +159,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
   
+
   <script>
     function flipCard(card) {
       card.classList.toggle('flipped');
@@ -174,7 +175,7 @@
     <h2>Mes Honoraires</h2>
     <div class="honoraires-container">
       <div class="honoraire-card">
-        <h3>Honoraires au temps passét</h3>
+        <h3>Honoraires au temps passé</h3>
         <p>Les honoraires sont calculés en fonction du temps effectivement consacré à chaque dossier, sur la base d’un tarif horaire préalablement défini.</p>
       </div>
       <div class="honoraire-card">
@@ -276,16 +277,16 @@
 
     <div class="footer-socials">
       <a href="mailto:lisa.giorgi.avocat@outlook.com">
-        <img src="/email.svg" alt="Email"> 
+        <img src="./public/assets/images/email.svg" alt="Email"> 
     </a>
     <a href="tel:+33612414382">
-        <img src="/tel2.svg" alt="Téléphone">
+        <img src="./public/assets/images/tel2.svg" alt="Téléphone">
     </a>
         <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
-            <img src="/insta.svg" alt="Instagram">
+            <img src="./public/assets/images/insta.svg" alt="Instagram">
         </a>
         <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
-            <img src="/linkedin.svg" alt="LinkedIn">
+            <img src="./public/assets/images/linkedin.svg" alt="LinkedIn">
         </a>
     </div>
     <div class="footer-links">
@@ -302,7 +303,7 @@
 
 
 </body>
-<script src="/script.js"></script>
+<script src="./public/assets/js/script.js"></script>
 <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
 </html>
