Refactor legal mentions page and styles
- Updated the HTML structure of the mentions légales page for better layout and responsiveness.
- Changed stylesheet links to point to the new CSS files.
- Enhanced the footer section with social media links and contact information.
- Removed the old stylesPage.css and added stylesMedia.css for responsive design.
- Improved JavaScript functionality for the sidebar menu toggle.
- Added new images and updated existing ones for better visual representation.

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -14,64 +14,117 @@
   <meta property="og:type" content="website">
   <title>Mentions légales - Maître Giorgi Avocat à Marseille</title>
   <link rel="icon" type="image/x-icon" href="logo.ico">
-  <link rel="stylesheet" href="stylesPage.css">
+  <link rel="stylesheet" href="/public/assets/css/styles.css">
+  <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
 </head>
 
 
+
 <body>
-  <nav>
-    <div><a href="/index.html"><img class="logo" src="/logo.jpg" alt="Logo Avocat Lisa Giorgi"></a></div>
-    <div>
-      <h1>Mentions Légales</h1>
+  <div class="header">
+    <div class="container">
+      <a href="#" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
+      <nav class="nav-page">
+        <ul class="nav-list">
+          <li><a href="/index.html">Accueil</a></li>
+
+        </ul>
+      </nav>
     </div>
-  </nav>
-
-
-  <!-- Contenu des Mentions Légales -->
-  <section>
-    <div>
+    <div class="hero">
+      <div class="hero-bloc-text">
+        <div class="bloc-hero" >
+        <h1>Mentions legales</h1>
+      </div>
+      </div>
+      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg" alt="Réparation et Esthétique Automobile">
+    </div>
+  </div>
+  
+    <div style="padding: 25px; text-align: center;" class="legal-notice">
       <h2>Informations légales</h2>
       <p>Conformément à la législation en vigueur, voici les informations concernant le site de Maître Giorgi.</p>
-
+  
       <h3>1. Éditeur du site</h3>
       <p>Le site Lisa Giorgi - Avocat à Marseille est édité par :<br>
-        Maître Giorgi, Avocat en sécuriser la fiscalité des particuliers et des entreprise, avec une approche intégrée en droit des sociétés<br>
+        Maître Giorgi, Avocat en fiscalité des particuliers et des entreprises, avec une approche intégrée en droit des sociétés<br>
         Adresse : 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille<br>
-        Téléphone : +33612414382<br>
-        Email : lisa.giorgi.avocat@outlook.com<br>
+        Téléphone : <a href="tel:+33612414382">+33 6 12 41 43 82</a><br>
+        Email : <a href="mailto:lisa.giorgi.avocat@outlook.com">lisa.giorgi.avocat@outlook.com</a>
       </p>
-
+  
       <h3>2. Hébergeur du site</h3>
       <p>Le site est hébergé par :<br>
         Netlify<br>
-        Adresse de l'hébergeur : 44 Montgomery Street, Suite 300, San Francisco, CA 94104, États-Unis<br>
-        Téléphone : +1 844-899-7312<br>
+        Adresse : 44 Montgomery Street, Suite 300, San Francisco, CA 94104, États-Unis<br>
+        Téléphone : +1 844-899-7312
       </p>
-
+  
       <h3>3. Propriété intellectuelle</h3>
-      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître Giorgi, sauf mention
-        contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
-
+      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître Giorgi, sauf mention contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
+  
       <h3>4. Données personnelles</h3>
-      <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des
-        demandes de contact et des services proposés par Maître Giorgi. Vous disposez d'un droit d'accès, de
-        rectification et de suppression de vos données personnelles.</p>
-
+      <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des demandes de contact et des services proposés par Maître Giorgi. Vous disposez d'un droit d'accès, de rectification et de suppression de vos données personnelles.</p>
+  
       <h3>5. Responsabilité</h3>
-      <p>Maître Giorgi met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être
-        tenue responsable des erreurs ou omissions pouvant y figurer.</p>
+      <p>Maître Giorgi met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être tenue responsable des erreurs ou omissions pouvant y figurer.</p>
     </div>
-  </section>
+  
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- Section Logos -->
+        <div class="footer-logos">
+          <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt=""></a>
+          <a href="mailto:lisa.giorgi.avocat@outlook.com">
+            <img class="footerA" src="../public/assets/images/email.svg" alt="Email"> 
+        </a>
+        <a href="tel:+33612414382">
+            <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
+        </a>
+            <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
+                <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
+                <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
+            </a>
+        </div>
+  
+        <div class="footer-info">
+          <div>
+            <p>🕒 Horaires d’ouverture : 9h - 19h</p>
+            <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
+          </div>  <br>
+    
+        </div>
+        <!-- Section Informations -->
+        <div class="footer-info">
+          <br>
+          <div>
+          <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
+          <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
+          <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
+          </div>
+        </div> <br>
+        <div class="droit-reserver">
+            <p style="padding: 5px;">© 2025 Natam</p>
+            <p style="padding: 5px;">Tous droits réservés</p>
+        </div>
+      </div>
+    </footer>
+<style>
+.nav-page a{
+  all: unset;
+  list-style: none;
+    gap: 15px;
+    padding: 5px;
+}
+.nav-page li{
+  all: unset;
+}
+</style>
 
-  <!-- Footer Section -->
-  <footer>
-    <div class="footer-links">
-      <a href="/mentions-legales.html">Mentions légales</a>
-      <a href="/politique-confidentialite.html">Politique de confidentialité</a>
-    </div>
-    <p>&copy; 2025 Maître Giorgi | Tous droits réservés</p>
-  </footer>
-
+<script src="/public/assets/js/script.js"></script>
 </body>
+
 
 </html>
