Update footer layout and styles for improved readability

--- a/index.html
+++ b/index.html
@@ -264,18 +264,17 @@
         <div>
           <p>🕒 Horaires d’ouverture : 9h - 19h</p>
           <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
-        </div>  <br>
+        </div> 
   
       </div>
       <!-- Section Informations -->
       <div class="footer-info">
-        <br>
         <div>
         <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
         <!-- <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p> -->
         <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
         </div>
-      </div> <br>
+      </div>
       <div class="droit-reserver">
           <p style="padding: 5px;">© 2025 Natam</p>
           <p style="padding: 5px;">Tous droits réservés</p>
