Update footer links and styles for improved accessibility and consistency

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="footer-info">
         <div>
         <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
-        <!-- <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p> -->
+        <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
         <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
         </div>
       </div>
