--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -70,47 +70,48 @@
       <p>Maître Giorgi met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être tenue responsable des erreurs ou omissions pouvant y figurer.</p>
     </div>
   
-    <footer class="footer">
-      <div class="footer-container">
-        <!-- Section Logos -->
-        <div class="footer-logos">
-          <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt=""></a>
-          <a href="mailto:lisa.giorgi.avocat@outlook.com">
-            <img class="footerA" src="../public/assets/images/email.svg" alt="Email"> 
-        </a>
-        <a href="tel:+33612414382">
-            <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
-        </a>
-            <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
-                <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
-            </a>
-            <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
-                <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
-            </a>
-        </div>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- Section Logos -->
+      <div class="footer-logos">
+        <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt=""></a>
+        <a href="mailto:lisa.giorgi.avocat@outlook.com">
+          <img class="footerA" src="../public/assets/images/email.svg" alt="Email"> 
+      </a>
+      <a href="tel:+33612414382">
+          <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
+      </a>
+          <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
+              <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
+          </a>
+          <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
+              <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
+          </a>
+      </div>
+
+      <div class="footer-info">
+        <div>
+          <p>🕒 Horaires d’ouverture : 9h - 19h</p>
+          <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
+        </div> 
   
-        <div class="footer-info">
-          <div>
-            <p>🕒 Horaires d’ouverture : 9h - 19h</p>
-            <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
-          </div>  <br>
-    
-        </div>
-        <!-- Section Informations -->
-        <div class="footer-info">
-          <br>
-          <div>
-          <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
-          <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
-          <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
-          </div>
-        </div> <br>
-        <div class="droit-reserver">
-            <p style="padding: 5px;">© 2025 Natam</p>
-            <p style="padding: 5px;">Tous droits réservés</p>
+      </div>
+      <!-- Section Informations -->
+      <div class="footer-info">
+        <div>
+        <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
+        <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
+        <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
         </div>
       </div>
-    </footer>
+      <div class="droit-reserver">
+          <p style="padding: 5px;">© 2025 Natam</p>
+          <p style="padding: 5px;">Tous droits réservés</p>
+      </div>
+    </div>
+  </footer>
+
 <style>
 .nav-page a{
   all: unset;
