--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="#" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
+      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
       <nav class="nav">
         <button class="menu" id="menu-toggle"aria-label="Menu"></button>
         <ul class="nav-list">
