--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -33,7 +33,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="#" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
+      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
       <nav class="nav-page">
         <ul class="nav-list">
           <li><a href="/index.html">Accueil</a></li>
