Update legal mentions with new contact information and correct logo path

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/mentions-legales">
   <meta property="og:type" content="website">
   <title>Mentions légales - Maître Giorgi Avocat à Marseille</title>
-  <link rel="icon" type="image/x-icon" href="logo.ico">
+  <link rel="icon" type="image/x-icon" href="/public/assets/images/logo.ico">
   <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
 </head>
@@ -47,11 +47,11 @@
   
       <h3>1. Éditeur du site</h3>
       <p>Le site Lisa Giorgi - Avocat à Marseille est édité par :<br>
-        Maître Giorgi, Avocat en fiscalité des particuliers et des entreprises, avec une approche intégrée en droit des sociétés<br>
-        Adresse : 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille<br>
-        Téléphone : <a href="tel:+33612414382">+33 6 12 41 43 82</a><br>
-        Email : <a href="mailto:lisa.giorgi.avocat@outlook.com">lisa.giorgi.avocat@outlook.com</a>
-      </p>
+        Maître Giorgi, Avocate en fiscalité des particuliers et des entreprises, avec une approche intégrée en droit des sociétés.<br>
+        Réalisation technique : Natam<br>
+        Téléphone : <a href="tel:+33749591337">+33 7 49 59 13 37</a><br>
+        Email : <a href="mailto:contact@natam.fr">contact@natam.fr</a> / <a href="mailto:natam.business@gmail.com">natam.business@gmail.com</a>
+      </p>   
   
       <h3>2. Hébergeur du site</h3>
       <p>Le site est hébergé par :<br>
