--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
+      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
       <nav class="nav">
         <button class="menu" id="menu-toggle"aria-label="Menu"></button>
         <ul class="nav-list">
@@ -60,11 +60,11 @@
     <div class="hero">
       <div class="hero-bloc-text">
         <div class="bloc-hero" >
-        <img style="height: 250; width: 200px; object-fit: cover; border-radius: 25px;" src="../public/assets/images/profil-transparente.png" alt="">
+        <img style="height: 250; width: 200px; object-fit: cover; border-radius: 25px;" src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
         <h1>Lisa Giorgi</h1>
         <h2>Avocat au Barreau de Marseille</h2></div>
       </div>
-      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg" alt="Réparation et Esthétique Automobile">
+      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg" alt="Palais de justice de Marseille"> 
     </div>
   </div>
   <div  id="Domaine" class="about">
@@ -245,7 +245,7 @@
     <div class="footer-container">
       <!-- Section Logos -->
       <div class="footer-logos">
-        <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt=""></a>
+        <a href="#" class="logo"><img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
         <a href="mailto:lisa.giorgi.avocat@outlook.com">
           <img class="footerA" src="../public/assets/images/email.svg" alt="Email"> 
       </a>
