--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -33,7 +33,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Logo livradois Automobiles"></a>
+      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
       <nav class="nav-page">
         <ul class="nav-list">
           <li><a href="/index.html">Accueil</a></li>
@@ -47,7 +47,7 @@
         <h1>Politique de confidentialité</h1>
       </div>
       </div>
-      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg" alt="Réparation et Esthétique Automobile">
+      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg" alt="Palais de justice de Marseille">
     </div>
   </div>
   
@@ -87,7 +87,7 @@
       <div class="footer-container">
         <!-- Section Logos -->
         <div class="footer-logos">
-          <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt=""></a>
+          <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
           <a href="mailto:lisa.giorgi.avocat@outlook.com">
             <img class="footerA" src="../public/assets/images/email.svg" alt="Email"> 
         </a>
