Refactor HTML for improved readability by removing unnecessary line breaks in list items

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <h3 class="blog-card-title">Relations avec l’administration fiscale</h3>
             <p class="blog-card-text">J’accompagne mes clients dans toutes leurs démarches auprès de l’administration fiscale pour simplifier et sécuriser leurs obligations :</p>
             <ul style="margin-top: 5px;">
-              <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li> <br>
-              <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes locales).</li> <br>
+              <li>Régularisation ou dépôt de déclarations fiscales, y compris hors délais.</li> 
+              <li>Contestation et suivi des démarches après la réception d’un avis d’imposition (IR, IS, TVA, taxes locales).</li> 
               <li>Mise en place et sécurisation de dispositifs fiscaux spécifiques, comme l’application du régime de faveur des impatriés.</li>
           </ul>
           </div>
@@ -96,9 +96,9 @@
             <h3 class="blog-card-title">Conseil en fiscalité</h3>
             <p class="blog-card-text">J’accompagne mes clients dans la gestion de leur fiscalité en fonction de leurs objectifs personnels et professionnels, en mettant l’accent sur l’ingénierie fiscale pour trouver des solutions adaptées et sécurisées.</p>
             <ul style="margin-top: 5px;">
-              <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li> <br>
-              <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li> <br>
-              <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li> <br>
+              <li>Développer des stratégies fiscales sur mesure pour réduire votre imposition ou maximiser les avantages fiscaux, que ce soit pour les particuliers ou les entreprises.</li> 
+              <li>Mettre en place des solutions d’ingénierie fiscale lors de la gestion de votre patrimoine, de la cession ou transmission d’entreprise, ou encore dans le cadre d’une succession ou donation.</li> 
+              <li>Accompagner vos projets immobiliers avec une approche fiscale réfléchie, en vous conseillant sur les meilleures options lors de l’achat, de la vente ou des investissements.</li> 
               <li>Préparer et déposer vos déclarations fiscales dans le respect des obligations légales, afin de garantir une conformité totale.</li>
             </ul>
           </div>
@@ -109,9 +109,9 @@
         <div class="blog-card">
           <div class="blog-card-body">
             <h3 class="blog-card-title">Gestion des contrôles et litiges fiscaux</h3>
-            <p class="blog-card-text">Je défends les intérêts de mes clients dans la gestion des contrôles et litiges fiscaux, en agissant avec pragmatisme et réactivité. <br> <br> Je les assiste dans les relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à chaque situation.</p>
+            <p class="blog-card-text">Je défends les intérêts de mes clients dans la gestion des contrôles et litiges fiscaux, en agissant avec pragmatisme et réactivité.   Je les assiste dans les relations avec l’administration fiscale, en élaborant des stratégies de défense adaptées à chaque situation.</p>
             <ul style="margin-top: 5px;">
-              <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et efficace.</li> <br>
+              <li>Répondre aux demandes de renseignements ou de justifications de l’administration de manière stratégique et efficace.</li> 
               <li>Construire une défense solide lors des contrôles fiscaux, qu’il s’agisse de vérifications de comptabilité, d’examen de situation fiscale personnelle (ESFP), ou de contrôles sur la TVA, en analysant les éléments du dossier et en développant des arguments pour contester les impositions contestables.</li>
           </ul>
           </div>
@@ -122,9 +122,9 @@
         <div class="blog-card">
           <div class="blog-card-body">
             <h3 class="blog-card-title">Droit des sociétés</h3>
-            <p class="blog-card-text">L’assistance à mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique. <br> <br> Je les aide à structurer leur société de manière à ce qu’elle soit alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques. <br> <br> Mon rôle est de leur apporter une vision claire et stratégique à chaque étape :</p>
+            <p class="blog-card-text">L’assistance à mes clients dans la création et l’évolution de leur entreprise est un aspect essentiel de ma pratique.   Je les aide à structurer leur société de manière à ce qu’elle soit alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques.   Mon rôle est de leur apporter une vision claire et stratégique à chaque étape :</p>
             <ul style="margin-top: 5px;">
-              <li> Créer leur société en prenant en compte leurs besoins spécifiques et le cadre fiscal le plus avantageux.</li> <br>
+              <li> Créer leur société en prenant en compte leurs besoins spécifiques et le cadre fiscal le plus avantageux.</li> 
               <li>Adapter et ajuster la structure de leur société au fur et à mesure de son développement, en tenant compte des évolutions de leur activité ou des changements dans leur équipe dirigeante.</li>
           </ul>
           </div>
@@ -137,8 +137,8 @@
             <h3 class="blog-card-title">Dommage corporel et défense des victimes</h3>
             <p class="blog-card-text">Je défends les droits des victimes de dommage corporel, en veillant à ce qu’elles soient pleinement indemnisées pour leurs préjudices.</p>
             <ul style="margin-top: 5px;">
-              <li>Les guider dans les démarches juridiques à entreprendre après un accident, qu’il soit médical, de la route ou autre.</li> <br>
-              <li>Analyser l’ensemble de leur préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle elles ont droit.</li> <br>
+              <li>Les guider dans les démarches juridiques à entreprendre après un accident, qu’il soit médical, de la route ou autre.</li> 
+              <li>Analyser l’ensemble de leur préjudice (corporel, psychologique, financier) afin d’évaluer correctement l’indemnisation à laquelle elles ont droit.</li> 
               <li>Négocier avec les assureurs ou, si nécessaire, représenter leurs intérêts devant les juridictions compétentes pour obtenir une indemnisation complète et juste.</li>
           </ul>
           </div>
