Fix image height style in hero section for correct rendering

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="hero">
       <div class="hero-bloc-text">
         <div class="bloc-hero" >
-        <img style="height: 250; width: 200px; object-fit: cover; border-radius: 25px;" src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
+        <img style="height: 250px; width: 200px; object-fit: cover; border-radius: 25px;" src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
         <h1>Lisa Giorgi</h1>
         <h2>Avocat au Barreau de Marseille</h2></div>
       </div>
